unpackaged/main/default/objects/QS_B2B_Vista_Company__c/QS_B2B_Vista_Company__c.object-meta.xml
<CustomObject>
    <label>Vista Company</label>
    <nameField>
        <label>Vista Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vista Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>