unpackaged/main/default/objects/QS_B2B_Vista_Company__c/fields/GTM_Captain__c.field-meta.xml
<CustomField>
    <fullName>GTM_Captain__c</fullName>
    <label>GTM Captain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>