unpackaged/main/default/objects/QS_B2B_Vista_Company__c/fields/QS_B2B_Company_Background__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_Company_Background__c</fullName>
    <label>Company Background</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>