unpackaged/main/default/objects/QS_B2B_Vista_Company__c/fields/QS_B2B_Value_Creation__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_Value_Creation__c</fullName>
    <label>Value Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audrey Pang</fullName>
            </value>
            <value>
                <fullName>Chirag Shah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>